--- a/AmicumMobile/app/build.gradle
+++ b/AmicumMobile/app/build.gradle
@@ -42,7 +42,7 @@ android {
 }
 
 dependencies {
-
+    kapt 'com.android.support:design:30.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
