--- a/AmicumMobile/app/build.gradle
+++ b/AmicumMobile/app/build.gradle
@@ -42,6 +42,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.5'
     kapt 'com.android.support:design:30.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
