Подключен компонент навигации, настроен граф Обновлены зависимости AppBarTop сделан универсальным, добавлены кнопки и иконки Главное меню вынесено в отдельный фрагммент

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,24 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.3.5"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
+
+    androidTestImplementation "android.arch.navigation:navigation-testing:$nav_version"
+
+
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt 'com.android.support:design:30.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
