--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,53 +40,49 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation AndroidBase.core
+    implementation AndroidBase.appCompat
+    implementation AndroidBase.gson
+    implementation AndroidBase.legacy
+    kapt AndroidBase.databinding
 
-    // Jetpack Compose Integration
-    implementation "androidx.navigation:navigation-compose:2.4.0-beta01"
+    implementation AndroidDesign.material
+    implementation AndroidDesign.constraintLayout
+    implementation AndroidDesign.navigationCompose
+    implementation AndroidDesign.navigationFragment
+    implementation AndroidDesign.navigationUI
+    implementation AndroidDesign.cardView
+    implementation AndroidDesign.recyclerview
+    implementation AndroidDesign.lifecycleExtensions
+    implementation AndroidDesign.lifecycleViewModel
+    kapt AndroidDesign.design
 
-    implementation 'com.google.code.gson:gson:2.8.8'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    kapt 'com.android.support:design:31.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    testImplementation 'junit:junit:4.13.2'
-    kapt 'com.android.databinding:compiler:3.1.4'
+    testImplementation Test.junit
+    androidTestImplementation Test.junitExt
+    androidTestImplementation Test.espressoCore
+
+    implementation Kotlin.kotlin
 
     // RxJava 3 - реактивность
-    implementation "io.reactivex.rxjava3:rxjava:3.0.13"
+    implementation RxJava.rxjava
 
     //Retrofit 2 - запрос с сервера данных
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'                                   // для использования rxjava в ретрофите
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'             // для использования корутин в ретрофите
+    implementation Retrofit.retrofit
+    implementation Retrofit.gson
+    implementation Retrofit.okhttp
+    implementation Retrofit.rxjava3
+    implementation Retrofit.RetrofitCoroutine
 
     //Koin - dependency injection
-    //Основная библиотека
-    implementation "io.insert-koin:koin-core:$koin_version"
-    //Koin для поддержки Android (Scope,ViewModel ...)
-    implementation "io.insert-koin:koin-android:$koin_version"
-    //Для совместимости с Java
-    implementation "io.insert-koin:koin-android-compat:$koin_version"
+    implementation KoinDI.core
+    implementation KoinDI.koinAndroid
+    implementation KoinDI.koinAndroidCompat
 
     //Coil - загрузка изображений
-    implementation 'io.coil-kt:coil:1.4.0'
+    implementation ImageLoader.coil
 
     //Room - локальная БД
-    implementation 'androidx.room:room-runtime:2.3.0'
-    implementation "androidx.room:room-ktx:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
+    implementation Room.runtime
+    implementation Room.ktx
+    kapt Room.compiler
 }
