--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,34 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+
+// For all subprojects - generate compileSdkVersion, minSdkVersion,
+// targetSdkVersion and Java compatibility
+subprojects {
+    afterEvaluate { project ->
+        if (project.plugins.findPlugin('android') ?:
+                project.plugins.findPlugin('android-library')) {
+            android {
+                compileSdkVersion Config.compile_sdk
+
+                defaultConfig {
+                    minSdkVersion Config.min_sdk
+                    targetSdkVersion Config.target_sdk
+                }
+
+                buildFeatures {
+                    dataBinding true
+                    viewBinding true
+                }
+
+                compileOptions {
+                    sourceCompatibility Config.java_version
+                    targetCompatibility Config.java_version
+                }
+            }
+        }
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
