--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
     <application
             android:fullBackupContent="false"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/logo_small"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/logo_small"
             android:supportsRtl="true"
             android:theme="@style/ThemeAmicumMobile"
-            android:name=".application.TranslatorApp">
+            android:name=".application.AmicumApp">
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
