1. Добавьте в приложение MyFirstTests несколько тестов в качестве негативного тестирования. Например, убедитесь, что почта без указания домейна не будет пропущена программой. Какие еще негативные тесты вы можете написать? 2. Выберите приложение, над которым вы уже работали в течение вашего обучения. Напишите для него несколько Unit-тестов и убедитесь, что они выполняются корректно; 3. Добавьте в приложение методы, которые можно проверить в тестах на: a. assertEquals; b. assertNotEquals; c. assertArrayEquals; d. assertNull; e. assertNotNull; f. assertSame.

--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -10,6 +10,11 @@ dependencies {
     //Coil - загрузка изображений
     implementation ImageLoader.coil
     implementation AndroidBase.gson
+
+    implementation TestUnit.junit
+    implementation TestUnit.junitExt
+    implementation TestUnit.espressoCore
+
     implementation project(Modules.config)
 
 }
