1. Выберите подходящее приложение, над которым вы уже работали в течение вашего обучения. Возможно, это будут ранние версии приложений, написанных на MVP (Популярные библиотеки, Профессиональная разработка приложений). Или Разбейте на слои приложения, которые вы писали в самом начале обучения (Калькулятор, Заметки, Погода, Кино). 2. Напишите тесты для Презентера с использованием моков.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,12 @@ dependencies {
     implementation Room.runtime
     implementation Room.ktx
     kapt Room.compiler
+
+    // Mockito - тестирование
+    testImplementation Mockito.mockitoCore
+    testImplementation Mockito.mockitoInline
+    testImplementation(Mockito.mockitoKotlin) {
+        exclude group: 'org.jetbrains.kotlin'
+        exclude group: 'org.mockito'
+    }
 }
