1. Покройте тестами MainActivity (кроме элементов RecyclerView — список мы будем тестировать позже): убедитесь, что все элементы видны и корректно отображаются, что надписи на кнопке и в EditText верные и т. д.; 2. Избавьтесь от проверки BuildConfig.TYPE == FAKE и разнесите разный код по разным классам в зависимости от Build Variants, как вы это делали на 12 занятии курса Андроид на Котлине.

--- a/db/build.gradle
+++ b/db/build.gradle
@@ -17,3 +17,10 @@ dependencies {
     androidTestImplementation TestUnit.junitExt
     androidTestImplementation TestUnit.espressoCore
 }
+
+android {
+    signingConfigs {
+        release {
+        }
+    }
+}
