--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -23,3 +23,10 @@ dependencies {
     androidTestImplementation TestUnit.junitExt
     androidTestImplementation TestUnit.espressoCore
 }
+
+android {
+    signingConfigs {
+        release {
+        }
+    }
+}
