--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -18,3 +18,10 @@ dependencies {
     implementation project(Modules.config)
 
 }
+
+android {
+    signingConfigs {
+        release {
+        }
+    }
+}
