--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     androidTestImplementation TestUnit.espressoCore
     testImplementation TestUnit.espressoIntents
     androidTestImplementation TestUnit.junitExt
+    androidTestImplementation TestUnit.uiautomator
 
     debugImplementation 'androidx.fragment:fragment-testing:1.4.0'
     testImplementation 'org.robolectric:robolectric:4.6'
@@ -88,6 +89,7 @@ dependencies {
     testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     implementation Kotlin.kotlin
 
