--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+        test {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -53,12 +62,12 @@ dependencies {
     implementation AndroidBase.appCompat
     implementation AndroidBase.gson
     implementation AndroidBase.legacy
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha03'
 
     kapt AndroidBase.databinding
 
     implementation AndroidDesign.material
     implementation AndroidDesign.constraintLayout
-    implementation AndroidDesign.navigationCompose
     implementation AndroidDesign.navigationFragment
     implementation AndroidDesign.navigationUI
     implementation AndroidDesign.cardView
@@ -86,9 +95,9 @@ dependencies {
     testImplementation 'androidx.test:runner:1.4.0'
     testImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     implementation Kotlin.kotlin
