--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,8 @@ dependencies {
     testImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'                         // автоматизированное тестирование UI
+    debugImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'                             // прокрутка списков
 
     implementation Kotlin.kotlin
 
